Moved CSS into CSS folder

--- a/web/CSS/style.css
+++ b/web/CSS/style.css
@@ -34,8 +34,8 @@ h1, h2, h3 {
 
 
 #main {
-    width: 720px;
-    float: center;
+    width: 540px;
+    float: right;
     padding: 0 0 0 40px;
 
 }
