--- a/web/CSS/quiz.css
+++ b/web/CSS/quiz.css
@@ -1,26 +1,20 @@
 #quiz
 {
-    margin: 0px 0px 0px 0px;
+    margin: 40px 40px 40px 40px;
 }
 
 #main
 {
     padding-left: 0px;
     float: none;
-    border-style: dashed;
     margin-right: 0px;
     width: auto;
 }
 
 .question
 {
+    border-style: dashed;
     text-align: left;
-    margin: 20px 20px 20px 20px;
-
-}
-
-#question0
-{
-    text-align: center;
-    margin: 40px 40px 40px 40px;
+    padding: 20px 20px 20px 20px;
+    width: auto;
 }
