--- a/web/CSS/quiz.css
+++ b/web/CSS/quiz.css
@@ -18,3 +18,9 @@
     padding: 20px 20px 20px 20px;
     width: auto;
 }
+
+.answerwrapper
+{
+    border-style: double;
+    padding: 10px 10px 10px 10px;
+}
