Changed border in quiz page

--- a/app/quizzy_server/static/CSS/quiz.css
+++ b/app/quizzy_server/static/CSS/quiz.css
@@ -13,7 +13,7 @@
 
 .question
 {
-    border-style: dashed;
+    border-style: outset;
     text-align: left;
     padding: 20px 20px 20px 20px;
     width: auto;
