Fixed style for waiting page

--- a/app/quizzy_server/templates/quizzy_app/waitingpage.html
+++ b/app/quizzy_server/templates/quizzy_app/waitingpage.html
@@ -13,7 +13,7 @@
     </div>
     <div id="content">
         <div id="main">
-            <h1>The exam "{{exam_name}}" will begin at {{start_time}} <br>
+            <h1 class = "text">The exam "{{exam_name}}" will begin at {{start_time}} <br>
                 Please wait...
             </h1>
         </div>
