--- a/app/quizzy_server/templates/quizzy_app/index.html
+++ b/app/quizzy_server/templates/quizzy_app/index.html
@@ -16,6 +16,7 @@
     
     <script>
         var language = "{{ exam.language }}";
+        var examID = "{{ exam.ID }}";
     </script>
     <script src="{% static "quizzy_app/JS/script.js" %}"></script>
 </head>
@@ -36,7 +37,8 @@
                     <p class="question">
                         {{ question.data }}
                     </p>
-                    <div class="answerwrapper"> <textarea class="answer" name="{{ question.id }}" form="quiz" wrap="soft" cols="90" rows="30"></textarea></div>
+                    <div class="answerwrapper"> <textarea onchange="update_question(this)" class="answer" name="{{ question.id }}" form="quiz" wrap="soft" cols="90" rows="30"></textarea></div>
+                    <p class="status"></p>
                 </div>
             {% endfor %}
             </form>
