--- a/app/quizzy_server/templates/quizzy_app/index.html
+++ b/app/quizzy_server/templates/quizzy_app/index.html
@@ -37,7 +37,7 @@
                     <p class="question">
                         {{ question.data }}
                     </p>
-                    <div class="answerwrapper"> <textarea onchange="update_question(this)" class="answer" name="{{ question.id }}" form="quiz" wrap="soft" cols="90" rows="30"></textarea></div>
+                    <div class="answerwrapper"> <textarea class="answer" name="{{ question.id }}" form="quiz" wrap="soft" cols="90" rows="30"></textarea></div>
                     <p class="status"></p>
                 </div>
             {% endfor %}
