--- a/app/quizzy_server/static/quizzy_app/CSS/quiz.css
+++ b/app/quizzy_server/static/quizzy_app/CSS/quiz.css
@@ -13,14 +13,34 @@
 
 .question
 {
-    border-style: outset;
     text-align: left;
     padding: 20px 20px 20px 20px;
     width: auto;
+    background-color: #e6f7ff;
+    margin-top: 0px;
 }
 
 .answerwrapper
 {
-    border-style: double;
+    border-style: none;
     padding: 10px 10px 10px 10px;
+}
+
+.free_response
+{
+    border-style: outset;
+    border-radius: 10px;
+}
+
+.status
+{
+    text-align: right;
+    padding: 3px;
+    padding-right: 10px;
+    margin-right: 0px;
+    background-color: rgba(150, 250, 180, 250);
+    border-style: solid;
+    border-color: rgb(100, 250, 150);
+    margin-top: 0px;
+    color: grey;
 }
